# leastprivilegestask

./: README.md
Atroshenko/: .gitignore  CMakeLists.txt  Makefile  config.c  config.h  err_handling.c  err_handling.h  interface_listener.c  interface_listener.h  main.c  signal.c
Atroshenko/common/include/: err_handling.h
Atroshenko/common/src/: err_handling.c  listen_changes.c
Atroshenko/editor/: CMakeLists.txt  main.c
Atroshenko/include/: config.h  err_handling.h  signal_queue.h
Atroshenko/interface/: CMakeLists.txt  main.c
Atroshenko/logger/: CMakeLists.txt  build.gradle  main.c
Atroshenko/logger/gradle/wrapper/: gradle-wrapper.properties
Atroshenko/src/: signal_queue.c
Atroshenko/src/interface/: main.c
